--- a/NextStats/Views/Base.lproj/Main.storyboard
+++ b/NextStats/Views/Base.lproj/Main.storyboard
@@ -18,20 +18,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gSt-Nd-qMa">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="4" id="gSt-Nd-qMa">
+                            <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="RJr-rt-Ayv">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="RJr-rt-Ayv" customClass="WidgetCollectionCell" customModule="NextStats" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YE6-AA-Rqc">
+                                            <rect key="frame" x="16" y="0.0" width="96" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kq2-Tc-cir">
+                                            <rect key="frame" x="32" y="32" width="64" height="64"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="64" id="KWP-EI-Olv"/>
+                                                <constraint firstAttribute="width" constant="64" id="nlp-p6-m2r"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1l-Ux-CG7">
+                                            <rect key="frame" x="16" y="107" width="96" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="YE6-AA-Rqc" firstAttribute="top" secondItem="RJr-rt-Ayv" secondAttribute="top" id="CeL-hm-CuZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="r1l-Ux-CG7" secondAttribute="trailing" constant="16" id="IIe-iT-KKf"/>
+                                    <constraint firstAttribute="bottom" secondItem="r1l-Ux-CG7" secondAttribute="bottom" id="K4r-f9-IKN"/>
+                                    <constraint firstItem="Kq2-Tc-cir" firstAttribute="centerY" secondItem="RJr-rt-Ayv" secondAttribute="centerY" id="Mbr-cy-HeX"/>
+                                    <constraint firstItem="YE6-AA-Rqc" firstAttribute="leading" secondItem="RJr-rt-Ayv" secondAttribute="leading" constant="16" id="Q0T-iu-3mP"/>
+                                    <constraint firstAttribute="trailing" secondItem="YE6-AA-Rqc" secondAttribute="trailing" constant="16" id="SJP-l8-Nt4"/>
+                                    <constraint firstItem="r1l-Ux-CG7" firstAttribute="leading" secondItem="RJr-rt-Ayv" secondAttribute="leading" constant="16" id="b7T-mK-EAp"/>
+                                    <constraint firstItem="Kq2-Tc-cir" firstAttribute="centerX" secondItem="RJr-rt-Ayv" secondAttribute="centerX" id="lG1-yU-b5j"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="icon" destination="Kq2-Tc-cir" id="BTK-Lw-SA7"/>
+                                    <outlet property="titleLabel" destination="YE6-AA-Rqc" id="QKL-BZ-32E"/>
+                                    <outlet property="valueLabel" destination="r1l-Ux-CG7" id="Kym-Pz-0b2"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -41,27 +77,77 @@
                     </collectionView>
                     <navigationItem key="navigationItem" id="gcs-F4-BN3"/>
                     <connections>
-                        <segue destination="NMa-wv-9aq" kind="show" id="SUg-aq-Ia7"/>
+                        <segue destination="NMa-wv-9aq" kind="show" identifier="ShowLogin" id="SUg-aq-Ia7"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6eN-wX-doz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="981.60000000000002" y="-32.833583208395808"/>
         </scene>
-        <!--View Controller-->
+        <!--Login Controller-->
         <scene sceneID="jPb-ck-oF8">
             <objects>
-                <viewController id="NMa-wv-9aq" sceneMemberID="viewController">
+                <viewController id="NMa-wv-9aq" customClass="LoginController" customModule="NextStats" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="K25-PA-MPc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xx-X1-SzT">
+                                <rect key="frame" x="56" y="168" width="79" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MYK-VH-0Sv">
+                                <rect key="frame" x="56" y="206" width="74" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MBb-xg-ePc">
+                                <rect key="frame" x="153" y="168" width="186" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" textContentType="username"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QKU-C8-xqs">
+                                <rect key="frame" x="153" y="202" width="186" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vje-ae-G6l">
+                                <rect key="frame" x="157" y="240" width="38" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="LoginClick:" destination="NMa-wv-9aq" eventType="touchUpInside" id="dTR-ck-qK1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Oa-1E-fKc">
+                                <rect key="frame" x="103" y="243" width="27" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="onepassword-button"/>
+                                <connections>
+                                    <action selector="OnePasswordClick:" destination="NMa-wv-9aq" eventType="touchUpInside" id="Ua1-lb-CZj"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vy8-cQ-v0T"/>
                     </view>
+                    <connections>
+                        <outlet property="PasswordField" destination="QKU-C8-xqs" id="Swh-Qd-A8b"/>
+                        <outlet property="UsernameField" destination="MBb-xg-ePc" id="8fv-x5-8m0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Ae-QG-tJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="982" y="746"/>
+            <point key="canvasLocation" x="981.60000000000002" y="745.27736131934034"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7kb-Th-gYC">
@@ -82,4 +168,7 @@
             <point key="canvasLocation" x="42.399999999999999" y="-32.833583208395808"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="onepassword-button" width="27" height="27"/>
+    </resources>
 </document>
